[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "QTensor"
version = "0.1.0"
description = "A tensor network library based on JAX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "opt_einsum",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]